@@ -49,11 +49,12 @@
 36. Use album covers when listing 'Browse Music Folder' tracks.
 37. Revert to pre-0.9.7 behaviour, and always show volume control.
 38. Show "Don't Stop the Music" status, if enabled, in place of repeat icon
-    (unless repeat single) in queue and now-playing screens. Press icon allows
-    changing setting.
+    (unless repeat single) in queue and now-playing screens. Pressing icon
+    allows changing setting.
 39. Long-press on "repeat off" icon to show "Don't Stop The Music" selection.
 40. If player status has "mode:stop" then use 0 as time, regardless of time
     setting in status message.
+41. Re-add long-press on back button to go home.
 
 1.0.2
 -----
